main: security config refactoring

--- a/app/src/main/resources/messages/messages_en.properties
+++ b/app/src/main/resources/messages/messages_en.properties
@@ -1,5 +1,6 @@
 parameters.errors=Validation error, check input parameters
-user.not.authenticated=User ( username: {0} ) is not logged in, please check credentials.
+token.authentication.error=Authentication error occurred: {0}.
+user.not.authorized=User ( username: {0} ) do not have sufficient rights ( user role: {1} ) for this resource: {2}
 user.not.registered=Registration error.
 user.already.registered=User ( username: {0} ) already registered.
 user.not.deleted=User ( id {0} ) is not deleted.
