--- a/app/src/main/resources/messages/messages_ru.properties
+++ b/app/src/main/resources/messages/messages_ru.properties
@@ -1,5 +1,6 @@
 parameters.errors=Ошибка валидации, проверьте входные параметры.
-user.not.authenticated=Пользователь ( username: {0} ) не аунтефицирован, проверьте ваши данные.
+token.authentication.error=Произошла ошибка аунтификации: {0}
+user.not.authorized=Пользователь имеет недостаточно прав ( роль пользователя: {0} ) для этого ресурса: {1}
 user.not.registered=Ошибка регистрации пользователя.
 user.already.registered=Пользователь ( username: {0} ) уже зарегистрирован.
 user.not.deleted=Пользователь ( id {0} ) не был удален.
