main: setup weblclient and retry policy

--- a/app/src/main/resources/messages/messages_en.properties
+++ b/app/src/main/resources/messages/messages_en.properties
@@ -5,3 +5,4 @@ user.not.registered=Registration error.
 user.already.registered=User ( username: {0} ) already registered.
 user.not.deleted=User ( id {0} ) is not deleted.
 request.body.required=Request Body is required.
+user.email.not.verified=User email: {0} not verified.
