--- a/app/src/main/resources/messages/messages_ru.properties
+++ b/app/src/main/resources/messages/messages_ru.properties
@@ -1,7 +1,8 @@
 parameters.errors=Ошибка валидации, проверьте входные параметры.
-token.authentication.error=Произошла ошибка аунтификации: {0}
-user.not.authorized=Пользователь имеет недостаточно прав ( роль пользователя: {0} ) для этого ресурса: {1}
+token.authentication.error=Произошла ошибка аунтификации: {0}.
+user.not.authorized=Пользователь имеет недостаточно прав ( роль пользователя: {0} ) для этого ресурса: {1}.
 user.not.registered=Ошибка регистрации пользователя.
 user.already.registered=Пользователь ( username: {0} ) уже зарегистрирован.
 user.not.deleted=Пользователь ( id {0} ) не был удален.
 request.body.required=Не найдено тело запроса.
+user.email.not.verified=Почта пользователя: {0} не подтверждена.
