add refresh token

--- a/app/src/main/resources/validation/ValidationMessages_ru.properties
+++ b/app/src/main/resources/validation/ValidationMessages_ru.properties
@@ -6,4 +6,5 @@ jakarta.validation.constraints.Email.message=данное поле должно 
 jakarta.validation.constraints.Size.message=значение должно быть между {min} и {max}.
 jakarta.validation.constraints.Max.message=значение должно быть равно или меньше {value}.
 jakarta.validation.constraints.Min.message=значение должно быть равно или больше {value}.
-auth.module.validation.user.disabled.message=пользователь должен быть неактивен при регистрации.
+user.disabled.message=пользователь должен быть неактивен при регистрации.
+user.refresh.token.invalid=Токен пользователя {0} не валиден: {1}
