update email template and migrations

--- a/app/src/main/resources/email/templates_en.properties
+++ b/app/src/main/resources/email/templates_en.properties
@@ -3,3 +3,4 @@ subject.registration=User registration
 registration.text.first=you have been successfully registered
 registration.text.second=but in order to use your account you need to confirm email address
 registration.text.third=click here
+registgation.button=Confirm
