--- a/app/src/main/resources/email/templates_ru.properties
+++ b/app/src/main/resources/email/templates_ru.properties
@@ -3,3 +3,4 @@ subject.registration=Регистрация пользователя
 registration.text.first=вы успешно зарегистрировались
 registration.text.second=но для полноценного использования аккаунта вам необходимо подтвердить вашу почту
 registration.text.third=ссылка
+registgation.button=Подтвердить
